--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,4 +28,14 @@
         app:layout_constraintTop_toBottomOf="@id/scan_button"
         app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/data_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Data: --"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/device_list"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
